Currently, if you type in the input or textarea elements, you will not be able to see the text. Also, their height is too small to be easy to use. Fix this, by setting the color to #ffffff, and setting their min-height to 2em.

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,8 @@ input, textarea, select {
 }
 
 input, textarea {
-  background-color: #0A0A23;
-  border: 1px solid #0A0A23;
+  background-color: #0a0a23;
+  border: 1px solid #0a0a23;
+  color: #ffffff;
+  min-height: 2em;
 }
